2007-03-20  John W. Eaton  <jwe@octave.org>

	* plot/newplot.m: Call __request_drawnow__ after initializing axes.
	* plot/text.m: Call __request_drawnow__ after creating text objects.

	* plot/clf.m: Don't call drawnow.

2007-03-20  Daniel J Sebald  <daniel.sebald@ieee.org>.

	* image/__img__.m: Maybe set yaxis to reverse for images.
	* plot/__go_draw_axes__.m: Don't add flipy to gnuplot command for
	images.

	* plot/drawnow.m: Make __go_close_all_registered__ persistent
	instead of global.  Only register __go_close_all__ with atexit if
	the plot stream is successfully opened.

2007-03-15  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Make have_newer_gnuplot persistent.
	From Daniel J Sebald <daniel.sebald@ieee.org>.

2007-03-15  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/__go_draw_axes__.m (do_linestyle_command): Fix marker types.
	Use numeric line types.

	* control/base/rlocus.m: Add asymptotes to the plot.  Use wider
	lines and larger markers.  Remove key titles from line type
	properties.

2007-03-14  John W. Eaton  <jwe@octave.org>

	* plot/__axis_label__.m: Accept additional property-value pairs
	and pass them to __go_text__.  Simply return the handle obtained
	from __go_text__ instead of calling get on the current axis.
	* plot/xlabel.m, plot/zlabel.m, plot/zlabel.m: Check args here.
	Allow for extra property value pairs to be passed along.
	* plot/title.m: Implement with __axis_label__ since it does all
	that title needs to do.

	* plot/clf.m: Set currentaxes property for current figure to [].

	* plot/__axis_label__.m: Convert arg to text handle before calling set.

	* plot/__plt__.m: Return line handles from all calls to __plt1__
	and __plt2__, not just the last.

	* plot/Makefile.in (SOURCES): Rename from SOURCES_M.
	(SOURCES_IN, GEN_M): Delete.
	(FCN_FILES): Don't include $(GEN_M).
	(all): Don't depend on $(GEN_M).
	($(GEN_M) : %.m : %.in): Delete pattern rule.

	* plot/text.m: Use __go_text__ instead of __uiboject_text_ctor__.
